--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-reanimated": "~2.14.4",
+    "react-native-text-input-mask": "^3.2.0",
     "react-native-url-handler": "^0.4.3",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0"
