--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -25,7 +26,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-calendar-picker": "^7.1.4",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-text-input-mask": "^3.2.0",
