Fixed login error

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
+    "base-64": "^1.0.0",
     "date-fns": "^2.30.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
