--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-calendar-picker": "^7.1.4",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.7.2",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-url-handler": "^0.4.3",
     "react-native-web": "~0.18.10",
