--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^1.4.0",
     "base-64": "^1.0.0",
     "date-fns": "^2.30.0",
-    "expo": "~48.0.18",
+    "expo": "^49.0.7",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
