--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "base-64": "^1.0.0",
+    "blob-util": "^2.0.2",
     "date-fns": "^2.30.0",
     "expo": "^49.0.7",
+    "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -28,6 +30,8 @@
     "react-native": "0.71.8",
     "react-native-calendar-picker": "^7.1.4",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-picker": "^7.0.0",
     "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-reanimated": "~2.14.4",
