--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "frontEnd-website",
-    "slug": "frontEnd-website",
+    "name": "frontEnd-victoriafit",
+    "slug": "frontEnd-victoriafit",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,6 +18,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.versa.frontendvictoriafit",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
