--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "^1.19.3",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-picker/picker": "2.4.8",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -22,24 +22,27 @@
     "blob-util": "^2.0.2",
     "date-fns": "^2.30.0",
     "expo": "^49.0.7",
-    "expo-image-picker": "^14.5.0",
-    "expo-status-bar": "~1.4.4",
+    "expo-image-picker": "~14.3.2",
+    "expo-status-bar": "~1.6.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.6",
     "react-native-calendar-picker": "^7.1.4",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^7.0.0",
-    "react-native-maps": "1.3.2",
+    "react-native-maps": "1.7.1",
     "react-native-modal-datetime-picker": "^17.0.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-picker-select": "^9.0.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-url-handler": "^0.4.3",
-    "react-native-web": "~0.18.10",
-    "react-native-webview": "11.26.0"
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
